small flag fix on mobile

--- a/style.css
+++ b/style.css
@@ -1361,6 +1361,7 @@ footer p {
     }
 
     .country-flag {
+        vertical-align: 0;
         margin-right: 0.4rem;
     }
     
